// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el comp correctamente con URL de imagen 1`] = `
<img
  alt="Product image"
  className="productImg undefined"
  src="imgURL"
/>
`;

exports[`ProductTitle debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
